Fix media-gallery, overflow is hidden.

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -3433,6 +3433,7 @@ button.icon-button.active i.fa-retweet {
   &,
   img {
     width: 100%;
+    overflow: hidden;
   }
 }
 
